# jarvis-voice

./: .gitignore  Cargo.toml  README.md  pyproject.toml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/transcriber_sync_20260405/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/rust_refactor_20260406/: plan.md
conductor/tracks/transcriber_sync_20260405/: plan.md
conductor/tracks/voice_processing_loop_20260405/: index.md  metadata.json  plan.md  spec.md
jarvis_voice/: __init__.py  listener.py  test_porcupine.py  test_transcribe.py
src/: config.rs  lib.rs  model.rs  resampler.rs  test_sync.rs  transcriber.rs
src/audio/: input.rs  resampler.rs
src/transcription/: engine.rs  mod.rs  model.rs  tests.rs
src/utils/: mod.rs
tests/: rust_audio.rs  rust_sync.rs  rust_transcription.rs  test_listener.py  test_sync_api.py
