[package]
name = "jarvis-transcriber"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "jarvis_transcriber"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.102"
audioadapter-buffers = "2.0"
cpal = "0.17.3"
crossbeam-channel = "0.5.15"
flate2 = "1.1.9"
futures-util = "0.3.32"
pyo3 = { version = "0.28.2", features = ["experimental-async"] }
reqwest = { version = "0.13.2", features = ["stream"] }
rubato = "1.0.1"
tar = "0.4.44"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
transcribe-rs = { version = "0.2.9", features = ["parakeet"] }
