[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "jarvis-voice"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "pvporcupine>=3.0.4",
    "pyaudio>=0.2.14",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
]
