[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "jarvis-voice"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "pvporcupine>=3.0.4",
    "sounddevice>=0.5",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.maturin]
python-source = "."
python-packages = ["jarvis_voice"]
module-name = "jarvis_voice.jarvis_transcriber"

